# llm-profiler

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
llm_profiler/: cli.py  profiler.py  reporter.py  utils.py  validation.py
tests/: test_core_profiler.py  test_profiling.py  test_reporter.py  test_validation.py
